--- a/Python/Pyqt5/css.css
+++ b/Python/Pyqt5/css.css
@@ -7,15 +7,30 @@ ul, li {
     list-style: none;
 }
 
+body {
+}
 
 #top-bar-area {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 50px;
     background-color: #aaaaff;
 }
 
 #side-menu-area {
+    position: absolute;
+    top: 50px;
+    left: 0;
     width: 250px;    
     height: calc(100vh - 50px);
     background-color: #ffaaaa;
+}
+
+#main-area {    
+    width: 100vw;
+    height: 100vh;
+    padding-left: 250px;
+    padding-top: 50px;
 }
