--- a/Python/Pyqt5/client_QWebEngineView/src/gui/windows/main/main.css
+++ b/Python/Pyqt5/client_QWebEngineView/src/gui/windows/main/main.css
@@ -31,6 +31,9 @@ body {
 #main-area {    
     width: 100vw;
     height: 100vh;
-    padding-left: 250px;
-    padding-top: 50px;
+    overflow: hidden;
+}
+#main-area > div {
+    margin-top: 50px;
+    margin-left: 250px;
 }
