--- a/React/react-typescript/src/index.css
+++ b/React/react-typescript/src/index.css
@@ -1,3 +1,7 @@
+@import url('./css/_reset.css');
+@import url('./css/_global.css');
+@import url('./css/_layout.css');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
