--- a/InPrayerApp/client/ui/src/pages/DropDraw/dropDraw.css
+++ b/InPrayerApp/client/ui/src/pages/DropDraw/dropDraw.css
@@ -10,9 +10,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 5px;
 
-    width: 300px;
+    min-width: 300px;
     height: 90%;
     padding: 5px;
     background-color: #ffffff;
@@ -20,6 +19,20 @@
 
 #drop-draw .draw-area {
     flex-grow: 1;
+
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
     height: 90%;
     background-color: #ffffff;
+}
+
+#drop-draw #ooo {
+    position: absolute;
+    width: 100px;
+    height: 50px;
+    background-color: #00ff003a;
+
 }
