--- a/InPrayerApp/client/ui/src/pages/NoCodeDraw/noCodeDraw.css
+++ b/InPrayerApp/client/ui/src/pages/NoCodeDraw/noCodeDraw.css
@@ -38,5 +38,8 @@
 #draw-area .drop-area {
     display: flex;
     width: 100%;
-    height: 50%;
+    height: 100%;
+    min-width: 500px;
+    min-height: 300px;
+    background-color: antiquewhite;
 }
